// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ExecutionActions /> tests snapshot tests "Aborted" status: Menu 1`] = `
<ul
  class="bp3-menu"
>
  <a
    class="bp3-menu-item"
    href="/account/TEST_ACCOUNT_ID/cd/orgs/TEST_ORG/projects/TEST_PROJECT/pipelines/TEST_PIPELINE/pipeline-studio/"
  >
    Edit Pipeline
  </a>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-popover-dismiss"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        Re-run Pipeline
      </div>
    </a>
  </li>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-disabled"
      tabindex="-1"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        Pause Pipeline
      </div>
    </a>
  </li>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-disabled"
      tabindex="-1"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        Abort Pipeline
      </div>
    </a>
  </li>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-disabled"
      tabindex="-1"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        Resume Pipeline
      </div>
    </a>
  </li>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-disabled"
      tabindex="-1"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        Download logs
      </div>
    </a>
  </li>
</ul>
`;

exports[`<ExecutionActions /> tests snapshot tests "Aborted" status: container 1`] = `
<div>
  <div
    class="main"
  >
    <span
      class="bp3-popover-wrapper"
    >
      <span
        class="bp3-popover-target"
      >
        <button
          class="bp3-button bp3-minimal bp3-small StyledProps--font Button--button Button--iconOnly StyledProps--main"
          tabindex="0"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-repeat StyledProps--main"
            icon="repeat"
          >
            <svg
              data-icon="repeat"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                repeat
              </desc>
              <path
                d="M10 5c0 .55.45 1 1 1h4c.55 0 1-.45 1-1V1c0-.55-.45-1-1-1s-1 .45-1 1v1.74A7.95 7.95 0 008 0C3.58 0 0 3.58 0 8c0 4.06 3.02 7.4 6.94 7.92.02 0 .04.01.06.01.33.04.66.07 1 .07 4.42 0 8-3.58 8-8 0-.55-.45-1-1-1s-1 .45-1 1c0 3.31-2.69 6-6 6-.71 0-1.37-.15-2-.38v.01C3.67 12.81 2 10.61 2 8c0-3.31 2.69-6 6-6 1.77 0 3.36.78 4.46 2H11c-.55 0-1 .45-1 1z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </span>
    </span>
    <span
      class="bp3-popover-wrapper"
    >
      <span
        class="bp3-popover-target"
      >
        <button
          class="bp3-button bp3-minimal bp3-small StyledProps--font Button--button Button--iconOnly StyledProps--main more"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-more StyledProps--main"
            icon="more"
          >
            <svg
              data-icon="more"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                more
              </desc>
              <path
                d="M2 6.03a2 2 0 100 4 2 2 0 100-4zM14 6.03a2 2 0 100 4 2 2 0 100-4zM8 6.03a2 2 0 100 4 2 2 0 100-4z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </span>
    </span>
  </div>
</div>
`;

exports[`<ExecutionActions /> tests snapshot tests "Expired" status: Menu 1`] = `
<ul
  class="bp3-menu"
>
  <a
    class="bp3-menu-item"
    href="/account/TEST_ACCOUNT_ID/cd/orgs/TEST_ORG/projects/TEST_PROJECT/pipelines/TEST_PIPELINE/pipeline-studio/"
  >
    Edit Pipeline
  </a>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-popover-dismiss"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        Re-run Pipeline
      </div>
    </a>
  </li>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-disabled"
      tabindex="-1"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        Pause Pipeline
      </div>
    </a>
  </li>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-disabled"
      tabindex="-1"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        Abort Pipeline
      </div>
    </a>
  </li>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-disabled"
      tabindex="-1"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        Resume Pipeline
      </div>
    </a>
  </li>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-disabled"
      tabindex="-1"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        Download logs
      </div>
    </a>
  </li>
</ul>
`;

exports[`<ExecutionActions /> tests snapshot tests "Expired" status: container 1`] = `
<div>
  <div
    class="main"
  >
    <span
      class="bp3-popover-wrapper"
    >
      <span
        class="bp3-popover-target"
      >
        <button
          class="bp3-button bp3-minimal bp3-small StyledProps--font Button--button Button--iconOnly StyledProps--main"
          tabindex="0"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-repeat StyledProps--main"
            icon="repeat"
          >
            <svg
              data-icon="repeat"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                repeat
              </desc>
              <path
                d="M10 5c0 .55.45 1 1 1h4c.55 0 1-.45 1-1V1c0-.55-.45-1-1-1s-1 .45-1 1v1.74A7.95 7.95 0 008 0C3.58 0 0 3.58 0 8c0 4.06 3.02 7.4 6.94 7.92.02 0 .04.01.06.01.33.04.66.07 1 .07 4.42 0 8-3.58 8-8 0-.55-.45-1-1-1s-1 .45-1 1c0 3.31-2.69 6-6 6-.71 0-1.37-.15-2-.38v.01C3.67 12.81 2 10.61 2 8c0-3.31 2.69-6 6-6 1.77 0 3.36.78 4.46 2H11c-.55 0-1 .45-1 1z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </span>
    </span>
    <span
      class="bp3-popover-wrapper"
    >
      <span
        class="bp3-popover-target"
      >
        <button
          class="bp3-button bp3-minimal bp3-small StyledProps--font Button--button Button--iconOnly StyledProps--main more"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-more StyledProps--main"
            icon="more"
          >
            <svg
              data-icon="more"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                more
              </desc>
              <path
                d="M2 6.03a2 2 0 100 4 2 2 0 100-4zM14 6.03a2 2 0 100 4 2 2 0 100-4zM8 6.03a2 2 0 100 4 2 2 0 100-4z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </span>
    </span>
  </div>
</div>
`;

exports[`<ExecutionActions /> tests snapshot tests "Failed" status: Menu 1`] = `
<ul
  class="bp3-menu"
>
  <a
    class="bp3-menu-item"
    href="/account/TEST_ACCOUNT_ID/cd/orgs/TEST_ORG/projects/TEST_PROJECT/pipelines/TEST_PIPELINE/pipeline-studio/"
  >
    Edit Pipeline
  </a>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-popover-dismiss"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        Re-run Pipeline
      </div>
    </a>
  </li>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-disabled"
      tabindex="-1"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        Pause Pipeline
      </div>
    </a>
  </li>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-disabled"
      tabindex="-1"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        Abort Pipeline
      </div>
    </a>
  </li>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-disabled"
      tabindex="-1"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        Resume Pipeline
      </div>
    </a>
  </li>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-disabled"
      tabindex="-1"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        Download logs
      </div>
    </a>
  </li>
</ul>
`;

exports[`<ExecutionActions /> tests snapshot tests "Failed" status: container 1`] = `
<div>
  <div
    class="main"
  >
    <span
      class="bp3-popover-wrapper"
    >
      <span
        class="bp3-popover-target"
      >
        <button
          class="bp3-button bp3-minimal bp3-small StyledProps--font Button--button Button--iconOnly StyledProps--main"
          tabindex="0"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-repeat StyledProps--main"
            icon="repeat"
          >
            <svg
              data-icon="repeat"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                repeat
              </desc>
              <path
                d="M10 5c0 .55.45 1 1 1h4c.55 0 1-.45 1-1V1c0-.55-.45-1-1-1s-1 .45-1 1v1.74A7.95 7.95 0 008 0C3.58 0 0 3.58 0 8c0 4.06 3.02 7.4 6.94 7.92.02 0 .04.01.06.01.33.04.66.07 1 .07 4.42 0 8-3.58 8-8 0-.55-.45-1-1-1s-1 .45-1 1c0 3.31-2.69 6-6 6-.71 0-1.37-.15-2-.38v.01C3.67 12.81 2 10.61 2 8c0-3.31 2.69-6 6-6 1.77 0 3.36.78 4.46 2H11c-.55 0-1 .45-1 1z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </span>
    </span>
    <span
      class="bp3-popover-wrapper"
    >
      <span
        class="bp3-popover-target"
      >
        <button
          class="bp3-button bp3-minimal bp3-small StyledProps--font Button--button Button--iconOnly StyledProps--main more"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-more StyledProps--main"
            icon="more"
          >
            <svg
              data-icon="more"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                more
              </desc>
              <path
                d="M2 6.03a2 2 0 100 4 2 2 0 100-4zM14 6.03a2 2 0 100 4 2 2 0 100-4zM8 6.03a2 2 0 100 4 2 2 0 100-4z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </span>
    </span>
  </div>
</div>
`;

exports[`<ExecutionActions /> tests snapshot tests "NotStarted" status: Menu 1`] = `
<ul
  class="bp3-menu"
>
  <a
    class="bp3-menu-item"
    href="/account/TEST_ACCOUNT_ID/cd/orgs/TEST_ORG/projects/TEST_PROJECT/pipelines/TEST_PIPELINE/pipeline-studio/"
  >
    Edit Pipeline
  </a>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-disabled"
      tabindex="-1"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        Re-run Pipeline
      </div>
    </a>
  </li>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-popover-dismiss"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        Pause Pipeline
      </div>
    </a>
  </li>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-popover-dismiss"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        Abort Pipeline
      </div>
    </a>
  </li>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-disabled"
      tabindex="-1"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        Resume Pipeline
      </div>
    </a>
  </li>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-disabled"
      tabindex="-1"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        Download logs
      </div>
    </a>
  </li>
</ul>
`;

exports[`<ExecutionActions /> tests snapshot tests "NotStarted" status: container 1`] = `
<div>
  <div
    class="main"
  >
    <span
      class="bp3-popover-wrapper"
    >
      <span
        class="bp3-popover-target"
      >
        <button
          class="bp3-button bp3-minimal bp3-small StyledProps--font Button--button Button--iconOnly StyledProps--main"
          tabindex="0"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-pause StyledProps--main"
            icon="pause"
          >
            <svg
              data-icon="pause"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                pause
              </desc>
              <path
                d="M6 3H4c-.55 0-1 .45-1 1v8c0 .55.45 1 1 1h2c.55 0 1-.45 1-1V4c0-.55-.45-1-1-1zm6 0h-2c-.55 0-1 .45-1 1v8c0 .55.45 1 1 1h2c.55 0 1-.45 1-1V4c0-.55-.45-1-1-1z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </span>
    </span>
    <span
      class="bp3-popover-wrapper"
    >
      <span
        class="bp3-popover-target"
      >
        <button
          class="bp3-button bp3-minimal bp3-small StyledProps--font Button--button Button--iconOnly StyledProps--main"
          tabindex="0"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-stop StyledProps--main"
            icon="stop"
          >
            <svg
              data-icon="stop"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                stop
              </desc>
              <path
                d="M12 3H4c-.55 0-1 .45-1 1v8c0 .55.45 1 1 1h8c.55 0 1-.45 1-1V4c0-.55-.45-1-1-1z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </span>
    </span>
    <span
      class="bp3-popover-wrapper"
    >
      <span
        class="bp3-popover-target"
      >
        <button
          class="bp3-button bp3-minimal bp3-small StyledProps--font Button--button Button--iconOnly StyledProps--main more"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-more StyledProps--main"
            icon="more"
          >
            <svg
              data-icon="more"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                more
              </desc>
              <path
                d="M2 6.03a2 2 0 100 4 2 2 0 100-4zM14 6.03a2 2 0 100 4 2 2 0 100-4zM8 6.03a2 2 0 100 4 2 2 0 100-4z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </span>
    </span>
  </div>
</div>
`;

exports[`<ExecutionActions /> tests snapshot tests "Paused" status: Menu 1`] = `
<ul
  class="bp3-menu"
>
  <a
    class="bp3-menu-item"
    href="/account/TEST_ACCOUNT_ID/cd/orgs/TEST_ORG/projects/TEST_PROJECT/pipelines/TEST_PIPELINE/pipeline-studio/"
  >
    Edit Pipeline
  </a>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-disabled"
      tabindex="-1"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        Re-run Pipeline
      </div>
    </a>
  </li>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-disabled"
      tabindex="-1"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        Pause Pipeline
      </div>
    </a>
  </li>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-popover-dismiss"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        Abort Pipeline
      </div>
    </a>
  </li>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-popover-dismiss"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        Resume Pipeline
      </div>
    </a>
  </li>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-disabled"
      tabindex="-1"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        Download logs
      </div>
    </a>
  </li>
</ul>
`;

exports[`<ExecutionActions /> tests snapshot tests "Paused" status: container 1`] = `
<div>
  <div
    class="main"
  >
    <span
      class="bp3-popover-wrapper"
    >
      <span
        class="bp3-popover-target"
      >
        <button
          class="bp3-button bp3-minimal bp3-small StyledProps--font Button--button Button--iconOnly StyledProps--main"
          tabindex="0"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-play StyledProps--main"
            icon="play"
          >
            <svg
              data-icon="play"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                play
              </desc>
              <path
                d="M12 8c0-.35-.19-.64-.46-.82l.01-.02-6-4-.01.02A.969.969 0 005 3c-.55 0-1 .45-1 1v8c0 .55.45 1 1 1 .21 0 .39-.08.54-.18l.01.02 6-4-.01-.02c.27-.18.46-.47.46-.82z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </span>
    </span>
    <span
      class="bp3-popover-wrapper"
    >
      <span
        class="bp3-popover-target"
      >
        <button
          class="bp3-button bp3-minimal bp3-small StyledProps--font Button--button Button--iconOnly StyledProps--main"
          tabindex="0"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-stop StyledProps--main"
            icon="stop"
          >
            <svg
              data-icon="stop"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                stop
              </desc>
              <path
                d="M12 3H4c-.55 0-1 .45-1 1v8c0 .55.45 1 1 1h8c.55 0 1-.45 1-1V4c0-.55-.45-1-1-1z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </span>
    </span>
    <span
      class="bp3-popover-wrapper"
    >
      <span
        class="bp3-popover-target"
      >
        <button
          class="bp3-button bp3-minimal bp3-small StyledProps--font Button--button Button--iconOnly StyledProps--main more"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-more StyledProps--main"
            icon="more"
          >
            <svg
              data-icon="more"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                more
              </desc>
              <path
                d="M2 6.03a2 2 0 100 4 2 2 0 100-4zM14 6.03a2 2 0 100 4 2 2 0 100-4zM8 6.03a2 2 0 100 4 2 2 0 100-4z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </span>
    </span>
  </div>
</div>
`;

exports[`<ExecutionActions /> tests snapshot tests "Queued" status: Menu 1`] = `
<ul
  class="bp3-menu"
>
  <a
    class="bp3-menu-item"
    href="/account/TEST_ACCOUNT_ID/cd/orgs/TEST_ORG/projects/TEST_PROJECT/pipelines/TEST_PIPELINE/pipeline-studio/"
  >
    Edit Pipeline
  </a>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-disabled"
      tabindex="-1"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        Re-run Pipeline
      </div>
    </a>
  </li>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-popover-dismiss"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        Pause Pipeline
      </div>
    </a>
  </li>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-popover-dismiss"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        Abort Pipeline
      </div>
    </a>
  </li>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-disabled"
      tabindex="-1"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        Resume Pipeline
      </div>
    </a>
  </li>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-disabled"
      tabindex="-1"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        Download logs
      </div>
    </a>
  </li>
</ul>
`;

exports[`<ExecutionActions /> tests snapshot tests "Queued" status: container 1`] = `
<div>
  <div
    class="main"
  >
    <span
      class="bp3-popover-wrapper"
    >
      <span
        class="bp3-popover-target"
      >
        <button
          class="bp3-button bp3-minimal bp3-small StyledProps--font Button--button Button--iconOnly StyledProps--main"
          tabindex="0"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-pause StyledProps--main"
            icon="pause"
          >
            <svg
              data-icon="pause"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                pause
              </desc>
              <path
                d="M6 3H4c-.55 0-1 .45-1 1v8c0 .55.45 1 1 1h2c.55 0 1-.45 1-1V4c0-.55-.45-1-1-1zm6 0h-2c-.55 0-1 .45-1 1v8c0 .55.45 1 1 1h2c.55 0 1-.45 1-1V4c0-.55-.45-1-1-1z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </span>
    </span>
    <span
      class="bp3-popover-wrapper"
    >
      <span
        class="bp3-popover-target"
      >
        <button
          class="bp3-button bp3-minimal bp3-small StyledProps--font Button--button Button--iconOnly StyledProps--main"
          tabindex="0"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-stop StyledProps--main"
            icon="stop"
          >
            <svg
              data-icon="stop"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                stop
              </desc>
              <path
                d="M12 3H4c-.55 0-1 .45-1 1v8c0 .55.45 1 1 1h8c.55 0 1-.45 1-1V4c0-.55-.45-1-1-1z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </span>
    </span>
    <span
      class="bp3-popover-wrapper"
    >
      <span
        class="bp3-popover-target"
      >
        <button
          class="bp3-button bp3-minimal bp3-small StyledProps--font Button--button Button--iconOnly StyledProps--main more"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-more StyledProps--main"
            icon="more"
          >
            <svg
              data-icon="more"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                more
              </desc>
              <path
                d="M2 6.03a2 2 0 100 4 2 2 0 100-4zM14 6.03a2 2 0 100 4 2 2 0 100-4zM8 6.03a2 2 0 100 4 2 2 0 100-4z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </span>
    </span>
  </div>
</div>
`;

exports[`<ExecutionActions /> tests snapshot tests "Running" status: Menu 1`] = `
<ul
  class="bp3-menu"
>
  <a
    class="bp3-menu-item"
    href="/account/TEST_ACCOUNT_ID/cd/orgs/TEST_ORG/projects/TEST_PROJECT/pipelines/TEST_PIPELINE/pipeline-studio/"
  >
    Edit Pipeline
  </a>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-disabled"
      tabindex="-1"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        Re-run Pipeline
      </div>
    </a>
  </li>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-popover-dismiss"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        Pause Pipeline
      </div>
    </a>
  </li>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-popover-dismiss"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        Abort Pipeline
      </div>
    </a>
  </li>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-disabled"
      tabindex="-1"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        Resume Pipeline
      </div>
    </a>
  </li>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-disabled"
      tabindex="-1"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        Download logs
      </div>
    </a>
  </li>
</ul>
`;

exports[`<ExecutionActions /> tests snapshot tests "Running" status: container 1`] = `
<div>
  <div
    class="main"
  >
    <span
      class="bp3-popover-wrapper"
    >
      <span
        class="bp3-popover-target"
      >
        <button
          class="bp3-button bp3-minimal bp3-small StyledProps--font Button--button Button--iconOnly StyledProps--main"
          tabindex="0"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-pause StyledProps--main"
            icon="pause"
          >
            <svg
              data-icon="pause"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                pause
              </desc>
              <path
                d="M6 3H4c-.55 0-1 .45-1 1v8c0 .55.45 1 1 1h2c.55 0 1-.45 1-1V4c0-.55-.45-1-1-1zm6 0h-2c-.55 0-1 .45-1 1v8c0 .55.45 1 1 1h2c.55 0 1-.45 1-1V4c0-.55-.45-1-1-1z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </span>
    </span>
    <span
      class="bp3-popover-wrapper"
    >
      <span
        class="bp3-popover-target"
      >
        <button
          class="bp3-button bp3-minimal bp3-small StyledProps--font Button--button Button--iconOnly StyledProps--main"
          tabindex="0"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-stop StyledProps--main"
            icon="stop"
          >
            <svg
              data-icon="stop"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                stop
              </desc>
              <path
                d="M12 3H4c-.55 0-1 .45-1 1v8c0 .55.45 1 1 1h8c.55 0 1-.45 1-1V4c0-.55-.45-1-1-1z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </span>
    </span>
    <span
      class="bp3-popover-wrapper"
    >
      <span
        class="bp3-popover-target"
      >
        <button
          class="bp3-button bp3-minimal bp3-small StyledProps--font Button--button Button--iconOnly StyledProps--main more"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-more StyledProps--main"
            icon="more"
          >
            <svg
              data-icon="more"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                more
              </desc>
              <path
                d="M2 6.03a2 2 0 100 4 2 2 0 100-4zM14 6.03a2 2 0 100 4 2 2 0 100-4zM8 6.03a2 2 0 100 4 2 2 0 100-4z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </span>
    </span>
  </div>
</div>
`;

exports[`<ExecutionActions /> tests snapshot tests "Success" status: Menu 1`] = `
<ul
  class="bp3-menu"
>
  <a
    class="bp3-menu-item"
    href="/account/TEST_ACCOUNT_ID/cd/orgs/TEST_ORG/projects/TEST_PROJECT/pipelines/TEST_PIPELINE/pipeline-studio/"
  >
    Edit Pipeline
  </a>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-popover-dismiss"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        Re-run Pipeline
      </div>
    </a>
  </li>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-disabled"
      tabindex="-1"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        Pause Pipeline
      </div>
    </a>
  </li>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-disabled"
      tabindex="-1"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        Abort Pipeline
      </div>
    </a>
  </li>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-disabled"
      tabindex="-1"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        Resume Pipeline
      </div>
    </a>
  </li>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-disabled"
      tabindex="-1"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        Download logs
      </div>
    </a>
  </li>
</ul>
`;

exports[`<ExecutionActions /> tests snapshot tests "Success" status: container 1`] = `
<div>
  <div
    class="main"
  >
    <span
      class="bp3-popover-wrapper"
    >
      <span
        class="bp3-popover-target"
      >
        <button
          class="bp3-button bp3-minimal bp3-small StyledProps--font Button--button Button--iconOnly StyledProps--main"
          tabindex="0"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-repeat StyledProps--main"
            icon="repeat"
          >
            <svg
              data-icon="repeat"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                repeat
              </desc>
              <path
                d="M10 5c0 .55.45 1 1 1h4c.55 0 1-.45 1-1V1c0-.55-.45-1-1-1s-1 .45-1 1v1.74A7.95 7.95 0 008 0C3.58 0 0 3.58 0 8c0 4.06 3.02 7.4 6.94 7.92.02 0 .04.01.06.01.33.04.66.07 1 .07 4.42 0 8-3.58 8-8 0-.55-.45-1-1-1s-1 .45-1 1c0 3.31-2.69 6-6 6-.71 0-1.37-.15-2-.38v.01C3.67 12.81 2 10.61 2 8c0-3.31 2.69-6 6-6 1.77 0 3.36.78 4.46 2H11c-.55 0-1 .45-1 1z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </span>
    </span>
    <span
      class="bp3-popover-wrapper"
    >
      <span
        class="bp3-popover-target"
      >
        <button
          class="bp3-button bp3-minimal bp3-small StyledProps--font Button--button Button--iconOnly StyledProps--main more"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-more StyledProps--main"
            icon="more"
          >
            <svg
              data-icon="more"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                more
              </desc>
              <path
                d="M2 6.03a2 2 0 100 4 2 2 0 100-4zM14 6.03a2 2 0 100 4 2 2 0 100-4zM8 6.03a2 2 0 100 4 2 2 0 100-4z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </span>
    </span>
  </div>
</div>
`;

exports[`<ExecutionActions /> tests snapshot tests "Suspended" status: Menu 1`] = `
<ul
  class="bp3-menu"
>
  <a
    class="bp3-menu-item"
    href="/account/TEST_ACCOUNT_ID/cd/orgs/TEST_ORG/projects/TEST_PROJECT/pipelines/TEST_PIPELINE/pipeline-studio/"
  >
    Edit Pipeline
  </a>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-popover-dismiss"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        Re-run Pipeline
      </div>
    </a>
  </li>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-disabled"
      tabindex="-1"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        Pause Pipeline
      </div>
    </a>
  </li>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-disabled"
      tabindex="-1"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        Abort Pipeline
      </div>
    </a>
  </li>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-disabled"
      tabindex="-1"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        Resume Pipeline
      </div>
    </a>
  </li>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-disabled"
      tabindex="-1"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        Download logs
      </div>
    </a>
  </li>
</ul>
`;

exports[`<ExecutionActions /> tests snapshot tests "Suspended" status: container 1`] = `
<div>
  <div
    class="main"
  >
    <span
      class="bp3-popover-wrapper"
    >
      <span
        class="bp3-popover-target"
      >
        <button
          class="bp3-button bp3-minimal bp3-small StyledProps--font Button--button Button--iconOnly StyledProps--main"
          tabindex="0"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-repeat StyledProps--main"
            icon="repeat"
          >
            <svg
              data-icon="repeat"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                repeat
              </desc>
              <path
                d="M10 5c0 .55.45 1 1 1h4c.55 0 1-.45 1-1V1c0-.55-.45-1-1-1s-1 .45-1 1v1.74A7.95 7.95 0 008 0C3.58 0 0 3.58 0 8c0 4.06 3.02 7.4 6.94 7.92.02 0 .04.01.06.01.33.04.66.07 1 .07 4.42 0 8-3.58 8-8 0-.55-.45-1-1-1s-1 .45-1 1c0 3.31-2.69 6-6 6-.71 0-1.37-.15-2-.38v.01C3.67 12.81 2 10.61 2 8c0-3.31 2.69-6 6-6 1.77 0 3.36.78 4.46 2H11c-.55 0-1 .45-1 1z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </span>
    </span>
    <span
      class="bp3-popover-wrapper"
    >
      <span
        class="bp3-popover-target"
      >
        <button
          class="bp3-button bp3-minimal bp3-small StyledProps--font Button--button Button--iconOnly StyledProps--main more"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-more StyledProps--main"
            icon="more"
          >
            <svg
              data-icon="more"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                more
              </desc>
              <path
                d="M2 6.03a2 2 0 100 4 2 2 0 100-4zM14 6.03a2 2 0 100 4 2 2 0 100-4zM8 6.03a2 2 0 100 4 2 2 0 100-4z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </span>
    </span>
  </div>
</div>
`;

exports[`<ExecutionActions /> tests snapshot tests "Waiting" status: Menu 1`] = `
<ul
  class="bp3-menu"
>
  <a
    class="bp3-menu-item"
    href="/account/TEST_ACCOUNT_ID/cd/orgs/TEST_ORG/projects/TEST_PROJECT/pipelines/TEST_PIPELINE/pipeline-studio/"
  >
    Edit Pipeline
  </a>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-disabled"
      tabindex="-1"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        Re-run Pipeline
      </div>
    </a>
  </li>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-popover-dismiss"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        Pause Pipeline
      </div>
    </a>
  </li>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-popover-dismiss"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        Abort Pipeline
      </div>
    </a>
  </li>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-disabled"
      tabindex="-1"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        Resume Pipeline
      </div>
    </a>
  </li>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-disabled"
      tabindex="-1"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        Download logs
      </div>
    </a>
  </li>
</ul>
`;

exports[`<ExecutionActions /> tests snapshot tests "Waiting" status: container 1`] = `
<div>
  <div
    class="main"
  >
    <span
      class="bp3-popover-wrapper"
    >
      <span
        class="bp3-popover-target"
      >
        <button
          class="bp3-button bp3-minimal bp3-small StyledProps--font Button--button Button--iconOnly StyledProps--main"
          tabindex="0"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-pause StyledProps--main"
            icon="pause"
          >
            <svg
              data-icon="pause"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                pause
              </desc>
              <path
                d="M6 3H4c-.55 0-1 .45-1 1v8c0 .55.45 1 1 1h2c.55 0 1-.45 1-1V4c0-.55-.45-1-1-1zm6 0h-2c-.55 0-1 .45-1 1v8c0 .55.45 1 1 1h2c.55 0 1-.45 1-1V4c0-.55-.45-1-1-1z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </span>
    </span>
    <span
      class="bp3-popover-wrapper"
    >
      <span
        class="bp3-popover-target"
      >
        <button
          class="bp3-button bp3-minimal bp3-small StyledProps--font Button--button Button--iconOnly StyledProps--main"
          tabindex="0"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-stop StyledProps--main"
            icon="stop"
          >
            <svg
              data-icon="stop"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                stop
              </desc>
              <path
                d="M12 3H4c-.55 0-1 .45-1 1v8c0 .55.45 1 1 1h8c.55 0 1-.45 1-1V4c0-.55-.45-1-1-1z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </span>
    </span>
    <span
      class="bp3-popover-wrapper"
    >
      <span
        class="bp3-popover-target"
      >
        <button
          class="bp3-button bp3-minimal bp3-small StyledProps--font Button--button Button--iconOnly StyledProps--main more"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-more StyledProps--main"
            icon="more"
          >
            <svg
              data-icon="more"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                more
              </desc>
              <path
                d="M2 6.03a2 2 0 100 4 2 2 0 100-4zM14 6.03a2 2 0 100 4 2 2 0 100-4zM8 6.03a2 2 0 100 4 2 2 0 100-4z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </span>
    </span>
  </div>
</div>
`;
